--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 
 <head>
     <title>Nj Dryfruits</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/391c99217b.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get Hand picked, Healthy and nutritious Dryfruits here">
-    <meta name="keywords" content="Dryfruits, Dryfruiets, healty food, health, hand picked, food, daily need, almonds, raisin, walnut, hazelnut, nuts"
-    <link rel="stylesheet" href="style.css">
+    <meta name="keywords" content="Dryfruits, Dryfruiets, healty food, health, hand picked, food, daily need, almonds, raisin, walnut, hazelnut, nuts">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
