--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get Hand picked, Healthy and nutritious Dryfruits here">
-    <meta name="keywords" content="Dryfruits, Dryfruiets, healty food, health, hand picked, food, daily need, almonds, raisin, walnut, hazelnut, nuts">
+    <meta name="keywords" content="Dryfruits, Dryfruiets, healty food, health, hand picked, food, daily need, almonds, raisin, walnut, hazelnut, nuts, raipur, new raipur, store, shop">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
