--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DFRYFV8N1S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DFRYFV8N1S');
+</script>
     <title>Nj Dryfruits</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/391c99217b.js" crossorigin="anonymous"></script>
