--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html lang="en">
 
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7597204963233216"
+     crossorigin="anonymous"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DFRYFV8N1S"></script>
 <script>
