--- a/index.html
+++ b/index.html
@@ -125,21 +125,21 @@
             <div class="cont">
                 <div class="iop">
                     <div class="rw">
-                        <img src="images/Instagram_icon.png" style="height: 200px; width: 200px;">
+                        <img src="images/IMG_20220301_201404_894-removebg-preview.png" style="height: 200px; width: 200px;">
                         <div class="ino">
                             <div class="hd">Name of special item</div>
                             <div class="st">Specification of special item</div>
                         </div>
                     </div>
                     <div class="rw">
-                        <img src="images/Instagram_icon.png" style="height: 200px; width: 200px;">
+                        <img src="images/IMG_20220301_201404_894-removebg-preview.png" style="height: 200px; width: 200px;">
                         <div class="ino">
                             <div class="hd">Name of special item</div>
                             <div class="st">Specification of special item</div>
                         </div>
                     </div>
                     <div class="rw">
-                        <img src="images/Instagram_icon.png" style="height: 200px; width: 200px;">
+                        <img src="images/IMG_20220301_201404_894-removebg-preview.png" style="height: 200px; width: 200px;">
                         <div class="ino">
                             <div class="hd">Name of special item</div>
                             <div class="st">Specification of special item</div>
