--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="hh">
-                <h1>some text here</h1>
+                <h1>Having fruits make you fresh, and having dry fruits makes you refreshed.Take care of your diet, love your body with the help of our dry fruits.</h1>
             </div>
         </div>
     </section>
@@ -167,7 +167,10 @@
                             <img src="images/Instagram_icon.png" style="height: 95px; width: 95px;">
                             <div class="info">
                                 <div class="head">instagram</div>
-                                <div class="sub-title">NJ dryfruits</div>
+                                <div class="sub-title">
+                                    <font colour="crimson"></font><a
+                                        href="https://www.instagram.com/nj_dryfruits/">nj_dryfruits</a>
+                                </div>
                             </div>
                         </div>
 
@@ -177,7 +180,7 @@
                                 <div class="head">Email</div>
                                 <div class="sub-title">
                                     <font colour="crimson"></font><a
-                                        href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=DmwnWrRpdLncgqwvBQhxMjKTdGGJzdzBhTMWXbtdGPMGCbGWDbDGLWWJkcJKJZnSvgqGPPLGGlwg">jswayam234@gmail.com</a>
+                                        href="mailto:jswayam234@gmail.com?">jswayam234@gmail.com</a>
                                 </div>
                             </div>
                         </div>
@@ -187,7 +190,7 @@
                                 <div class="head">Whatsapp</div>
                                 <div class="sub-title">
                                     <font colour="crimson"></font><a
-                                        href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=DmwnWrRpdLncgqwvBQhxMjKTdGGJzdzBhTMWXbtdGPMGCbGWDbDGLWWJkcJKJZnSvgqGPPLGGlwg">jswayam234@gmail.com</a>
+                                        href="https://wa.me/+919826385558?text=hi">+91 98263 85558</a>
                                 </div>
                             </div>
                         </div>
@@ -221,7 +224,7 @@
                                             text-decoration: underline;
                                         }
                                     </style>
-                                    <a href="https://www.instagram.com/sw4y4mj4in">+91 1234567891</a>
+                                    <a href=tel:98263-85558>+91 98263 85558</a>
                                 </div>
                             </div>
                         </div>
@@ -230,7 +233,7 @@
 
                 </div>
                 <div class="butt">
-                    <a href="" style="--clr:blueviolet"><span>Order Now</span><i></i></a>
+                    <a href="https://wa.me/+919826385558?text=hi" style="--clr:blueviolet"><span>Order Now</span><i></i></a>
                 </div>
 
             </div>
