--- a/index.html
+++ b/index.html
@@ -85,36 +85,34 @@
             <h2 class="title">Gallery</h2>
             <div class="container">
                 <div class="cardd">
-                    <img src="images/raisin.jpeg" alt="">
-                    <h5 class="imgsub">Image 1</h5>
+                    <img src="images/raisin.jpg" alt="">
+                    <div class="lay"><a href="https://wa.me/+919826385558?text=hi">order now</a></div>
+                    <h5 class="imgsub">Raisin(kishmis)</h5>
                 </div>
                 <div class="cardd">
-                    <img src="images/cashew.jpeg" alt="">
-                    <h5 class="imgsub">Image 1</h5>
+                    <img src="images/cashew.jpg" alt="">
+                    <div class="lay"><a href="https://wa.me/+919826385558?text=hi">order now</a></div>
+                    <h5 class="imgsub">Cashew(kaju)</h5>
                 </div>
                 <div class="cardd">
-                    <img src="images/walnut.jpeg" alt="">
-                    <h5 class="imgsub">Image 1</h5>
+                    <img src="images/walnut.webp" alt="">
+                    <div class="lay"><a href="https://wa.me/+919826385558?text=hi">order now</a></div>
+                    <h5 class="imgsub">Walnut(akhrot)</h5>
                 </div>
                 <div class="cardd">
-                    <img src="images/almonds.jpeg" alt="">
-                    <h5 class="imgsub">Image 1</h5>
+                    <img src="images/almonds.jfif" alt="">
+                    <div class="lay"><a href="https://wa.me/+919826385558?text=hi">order now</a></div>
+                    <h5 class="imgsub">Almonds(badam)</h5>
                 </div>
                 <div class="cardd">
-                    <img src="images/anjeer.jpeg" alt="">
-                    <h5 class="imgsub">Image 1</h5>
+                    <img src="images/anjeer.webp" alt="">
+                    <div class="lay"><a href="https://wa.me/+919826385558?text=hi">order now</a></div>
+                    <h5 class="imgsub">Fig(anjeer)</h5>
                 </div>
                 <div class="cardd">
-                    <img src="images/2.jpeg" alt="">
-                    <h5 class="imgsub">Image 1</h5>
-                </div>
-                <div class="cardd">
-                    <img src="images/3.jpeg" alt="">
-                    <h5 class="imgsub">Image 1</h5>
-                </div>
-                <div class="cardd">
-                    <img src="images/4.jpeg" alt="">
-                    <h5 class="imgsub">Image 1</h5>
+                    <img src="images/khurmani.webp" alt="">
+                    <div class="lay"><a href="https://wa.me/+919826385558?text=hi">order now</a></div>
+                    <h5 class="imgsub">Apricot(khurmani)</h5>
                 </div>
             </div>
         </div>
