--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                 <div class="head">Email</div>
                                 <div class="sub-title">
                                     <font colour="crimson"></font><a
-                                        href="mailto:jswayam234@gmail.com?">jswayam234@gmail.com</a>
+                                        href="mailto:mamtanileshjian@gmail.com?">mamtanileshjian@gmail.com</a>
                                 </div>
                             </div>
                         </div>
@@ -231,7 +231,7 @@
 
                 </div>
                 <div class="butt">
-                    <a href="https://wa.me/+919826385558?text=hi" style="--clr:blueviolet"><span>Order Now</span><i></i></a>
+                    <a href="https://wa.me/+919826385558?text=hi, i want to order" style="--clr:blueviolet"><span>Order Now</span><i></i></a>
                 </div>
 
             </div>
